--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -144,7 +144,7 @@ Otherwise we would have a perfect correlation between $Y_u=0$ and being currentl
 
 
 \begin{problem}\label{target3}
-We want to predict those users that migrated between regions, in any direction. This implies we need to see a change in the user's endemicity from positive to negative or viceversa:
+We want to predict those users that migrated between regions, in any direction. This implies we need to see a change in the user's endemicity from positive to negative or vice versa:
 \begin{align*}
 			Y_u =
 			\begin{cases}
@@ -322,7 +322,7 @@ y \approx f(x) = h\left(\sum_{j}\theta^j x^j\right)  \label{formula:1}
 \end{equation}
 
 where $h(\cdot)$ is an activation function transforming the feature's linear combinations with $\theta$, the model's parameters.
-Here $\theta$ is the unknown and can also be referred to as the coefficients of th problem.
+Here $\theta$ is the unknown and can also be referred to as the coefficients of the problem.
 %\footnote{In ~\cref{formula:1} we have omitted the intercept parameter, generally noted as $\theta_0$.
 %
 %The reason for this is that one can include this parameter implicitly if we allow for a synthetic feature $X^0$ in $X$ which is a vector with all its components equal to 1.}.
