--- a/ch_results.tex
+++ b/ch_results.tex
@@ -31,7 +31,7 @@ This information provided the algorithms with features that were highly informat
 Yet we decided to exclude this attribute for the problem of predicting a user's past home endemic condition because we wanted to evaluate the information present in other, less trivial, features.
 
 More so, we found other variables having mild interactions with the condition of being a past endemic user.
-As expected, people with high mobile interactions with the endemic region, in the form of call durations and call counts, also resulted in attributes which were related to users having past endemic homes.
+As expected, people with high mobile interactions with the endemic region, in the form of call duration and call counts, also resulted in attributes which were related to users having past endemic homes.
 This is most probably due to the locality effect in calling patterns, where most interactions between TelCo users occur in local regions.
 Thus users living in endemic regions would call other users nearby.
 
