final beta version commit

--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -531,7 +531,7 @@ In its most used form, regularization imposes restrictions to the model so as to
 This \textit{shrinkage} of parameters can be forced by penalizing large values for $\theta$ either by the number of non-null components of this value or by penalizing its distance to zero.
 By doing so, we hope that only the most relevant features are selected in the final model.
 
-As we will see in \cref{section-VcDimension}, a shorter model has the benefit of being more accurate in the estimation of the model's performance on unseen samples.
+Also, a shorter model has the benefit of being more accurate in the estimation of the model's performance on unseen samples.
 In other cases, the benefit of a reduction in the number of features is that the overall variance of the predictions are reduced, only with a slight increase in error.
 
 In addition, a more \textit{heuristic} argument for model parsimony follows from Occam's razor principle.
