Fix appendix numbering and cross referencing

--- a/main.tex
+++ b/main.tex
@@ -36,16 +36,21 @@
   \include{ch_machine_learning}
   \include{ch_model_selection}
   \include{ch_ensemble_methods}
-  \include{ch_results} 
-  \include{ch_conclusions} 
+  \include{ch_results}
+  \include{ch_conclusions}
 
+{
 \backmatter
-	\printbibheading[heading=bibbook]
-%tm	
-	\bibbysection[heading=subbib]
-	
-%\frontmatter
+\printbibheading[heading=bibbook]
+%tm
+\bibbysection[heading=subbib]
+}
+
+% \appendix
+% \part*{Appendices}
+\begin{appendices}
 \include{appendix}
+\end{appendices}
   % \printindex
 \end{document}
 
