Remove repeated word

--- a/appendix.tex
+++ b/appendix.tex
@@ -512,7 +512,7 @@ With these definitions we can then see that,
 	where $\sigma(\Theta)$ is the standard deviation of $rmg(\Theta,\textbf{x},\textbf{y})$.
 	In both cases, $\Theta$ and $\Theta'$ are given.% to be fixed.
 
-	Equation \cref{eq:rf-marginFunVar} in turn implies that
+	\cref{eq:rf-marginFunVar} in turn implies that
 
 	\begin{equation}\label{eq:rf-varianceBound}
 	\begin{split}
